--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,15 @@
 name: Publish pnpm package
+
 on:
   push:
     branches:
       - main
+
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -20,8 +22,6 @@ jobs:
         run: pnpm install
       # - name: Run tests
       #   run: pnpm test
-      - name: Build project
-        run: pnpm build
       - name: Publish package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
