--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18'
-      - run: pnpm dlx conventional-github-releaser -p angular
+      - run: npx conventional-github-releaser -p angular
         env:
           CONVENTIONAL_GITHUB_RELEASER_TOKEN: ${{secrets.GITHUB_TOKEN}}
