--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,10 @@
   "cSpell.words": [
     "aliyun",
     "antfu",
-    "huaweicloud"
+    "browserjs",
+    "esdk",
+    "huaweicloud",
+    "teojs",
+    "tsup"
   ]
 }
