--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,23 @@
     "rootDir": ".",
     "module": "ESNext",
     "moduleResolution": "Node",
+    "paths": {
+      "@/types/*": ["types/*"]
+    },
     "resolveJsonModule": true,
-    "typeRoots": ["src/types", "node_modules/@types"],
+    "typeRoots": ["./types", "./node_modules/@types"],
+    "types": ["ali-oss", "esdk-obs-browserjs/index.d.ts"],
     "strict": true,
     "strictNullChecks": true,
     "noUnusedParameters": true,
+    "declaration": true,
+    "outDir": "dist",
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
+  // "files": ["types/index.ts", "types/esdk-obs-browserjs/index.d.ts"],
+  "include": ["src/**/*", "types/**/*"],
   "exclude": ["dist", "node_modules", "**/test"]
 }
