--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@teojs/all-in-oss",
   "type": "module",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "description": "all in one oss",
   "author": "teojs <cheesen.xu@gmail.com>",
   "license": "MIT",
@@ -43,11 +43,13 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.3.4",
+    "@microsoft/api-extractor": "^7.47.7",
     "@types/node": "^20.10.3",
     "eslint": "^8.49.0",
     "eslint-plugin-format": "^0.1.0",
     "prettier": "^3.3.3",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.4.2",
+    "vitest": "^2.0.5"
   }
 }
