--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@teojs/all-in-oss",
   "type": "module",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "all in one oss",
   "author": "teojs <cheesen.xu@gmail.com>",
   "license": "MIT",
@@ -32,7 +32,7 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "tsup",
     "release": "pnpm dlx bumpp --all && npm publish --access public",
     "lint": "eslint"
   },
